# esp-idf-lp-i2c

./: .gitignore
components/adafruit_gfx/: Adafruit_GFX.cpp  Adafruit_GFX.h  Arduino.h  CMakeLists.txt  Print.cpp  Print.h  WString.cpp  WString.h
main/: CMakeLists.txt  gfx_app.cpp  is31fl3733.h  is31fl_display.cpp  is31fl_display.h  lp_i2c_main.c
main/lp_core/: HDC1080.h  main.c
